--- a/.vscode-mac.settings.json
+++ b/.vscode-mac.settings.json
@@ -73,25 +73,26 @@
   ],
   "workbench.colorCustomizations": {
     "activityBarBadge.background": "#00BCD4",
-    "list.activeSelectionForeground": "#00BCD4",
-    "list.inactiveSelectionForeground": "#00BCD4",
-    "list.highlightForeground": "#00BCD4",
-    "scrollbarSlider.activeBackground": "#00BCD450",
-    "editorSuggestWidget.highlightForeground": "#00BCD4",
-    "textLink.foreground": "#00BCD4",
-    "progressBar.background": "#00BCD4",
-    "pickerGroup.foreground": "#00BCD4",
-    "tab.activeBorder": "#00BCD4",
-    "notificationLink.foreground": "#00BCD4",
-    "editorWidget.resizeBorder": "#00BCD4",
-    "editorWidget.border": "#00BCD4",
-    "settings.modifiedItemIndicator": "#00BCD4",
-    "settings.headerForeground": "#00BCD4",
-    "panelTitle.activeBorder": "#00BCD4",
     "breadcrumb.activeSelectionForeground": "#00BCD4",
+    "editorSuggestWidget.highlightForeground": "#00BCD4",
+    "editorWidget.border": "#00BCD4",
+    "editorWidget.resizeBorder": "#00BCD4",
+    "gitlens.trailingLineForegroundColor": "#555",
+    "list.activeSelectionForeground": "#00BCD4",
+    "list.highlightForeground": "#00BCD4",
+    "list.inactiveSelectionForeground": "#00BCD4",
     "menu.selectionForeground": "#00BCD4",
     "menubar.selectionForeground": "#00BCD4",
-    "terminal.border": "#555"
+    "notificationLink.foreground": "#00BCD4",
+    "panelTitle.activeBorder": "#00BCD4",
+    "pickerGroup.foreground": "#00BCD4",
+    "progressBar.background": "#00BCD4",
+    "scrollbarSlider.activeBackground": "#00BCD450",
+    "settings.headerForeground": "#00BCD4",
+    "settings.modifiedItemIndicator": "#00BCD4",
+    "tab.activeBorder": "#00BCD4",
+    "terminal.border": "#555",
+    "textLink.foreground": "#00BCD4"
   },
   "workbench.editor.highlightModifiedTabs": true,
   "workbench.activityBar.visible": false,
@@ -146,5 +147,9 @@
   "editor.wordSeparators": "/\\()\"':,.;<>~!@#$%^&*|+=[]{}`?-",
   "pgFormatter.spaces": 2,
   "vim.neovimPath": "/opt/homebrew/bin/nvim",
-  "editor.scrollbar.verticalScrollbarSize": 8
+  "editor.scrollbar.verticalScrollbarSize": 8,
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "terminal.integrated.fontSize": 14,
+  "gitlens.codeLens.recentChange.enabled": false,
+  "gitlens.codeLens.authors.enabled": false
 }
