--- a/.curlrc
+++ b/.curlrc
@@ -1,4 +1,4 @@
-user-agent = "Mozilla/5.0 (Windows NT 6.1; rv:45.0) Gecko/20100101 Firefox/45.0"
+user-agent = "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/93.0.4577.82 Safari/537.36"
 referer = ";auto"
 connect-timeout = 10
 progress-bar
