--- a/.vscode-mac.settings.json
+++ b/.vscode-mac.settings.json
@@ -148,7 +148,6 @@
   },
   "telemetry.telemetryLevel": "off",
   "terminal.external.osxExec": "iTerm.app",
-  "terminal.integrated.fontSize": 14,
   "terminal.integrated.fontWeight": "400",
   "terminal.integrated.fontWeightBold": "normal",
   "typescript.disableAutomaticTypeAcquisition": true,
@@ -194,5 +193,6 @@
   "workbench.editor.highlightModifiedTabs": true,
   "workbench.editor.tabSizing": "shrink",
   "workbench.startupEditor": "none",
-  "window.zoomLevel": 1
+  "window.zoomLevel": 1,
+  "terminal.integrated.macOptionIsMeta": true
 }
